--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "mongoose": "^5.9.11",
     "nodemon": "^2.0.3"
   }
 }
